writing about hazelnut

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -148,18 +148,12 @@ Na\"ively, this prohibition on ill-typed edit states would force the programmer 
 % \clearpage
 
 \section{Extending Hazelnut}\label{sec:extending}
-\todo{write this section} Add sum types.
-
-H-expression
-
-Z-expression + Erasure rules
-
-Statics
-
-Movement actions
-
-Construct actions
-
+%% \todo{write this section} Add sum types.
+%% H-expression
+%% Z-expression + Erasure rules
+%% Statics
+%% Movement actions
+%% Construct actions
 \input{sumtypes}
 
 \section{Implementation}
