violet hotdogs, black wedge

--- a/macros.tex
+++ b/macros.tex
@@ -118,4 +118,4 @@
 \newcommand{\TABperformMove}[3]{#1 & \xlongrightarrow{#2} & #3}
 \newcommand{\TABperformDel}[2]{#1 \xlongrightarrow{\aDel} #2}
 
-\newcommand{\sumhasmatched}[2]{#1 \mathrel{\textcolor{violet}{\blacktriangleright_{+}}} #2}
+\newcommand{\sumhasmatched}[2]{#1 \mathrel{\textcolor{black}{\blacktriangleright_{+}}} #2}
