Lemmas and theorems use the same counter

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -36,7 +36,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \usepackage{rulelinks}
 
 \newtheorem{theorem}{Theorem}
-\newtheorem{lemma}{Lemma}
+\newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}{Corollary}
 \newtheorem{definition}{Definition}
 \newenvironment{proof-sketch}{\noindent{\emph{Proof Sketch.}}}{\qed}
