added new impl figure; more closely matches terminology and syntax from paper

--- a/implementation.tex
+++ b/implementation.tex
@@ -2,10 +2,20 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=4in]{Implementation_Diagram}
-\caption{Implementation Concepts. Each Action--Zipper Structure--View combination is considered to appear ``instantaneously'' on the timeline.}
-\label{fig:FRP}
+\includegraphics[width=0.75\columnwidth]{impl-overview}
+\caption{}
+\label{fig:impl-overview}
 \end{figure}
+
+
+
+
+
+
+
+
+
+
 
 \todo{make figure take up only one column}\todo{change terminology in figure}\todo{revise}
 The key question that must be answered for any implementation strategy is: how do we model a stream of actions from a user? Let us assume that these actions are chosen (using some input device, preferably, a keyboard) from some ``palette'' that never presents the user with actions that are not semantically well-defined, according to the action semantics defined earlier.
