--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -1,6 +1,5 @@
 
-In this section, we enrich the core calculus of Hazelnut, initially
-presented as consisting of arrow and a base type (numbers), which an
+In this section, we enrich the core calculus of Hazelnut with an
 additional type constructor for (binary) \emph{sum types}, often
 written~$\tau_1 + \tau_2$.
 %
