minor: caption tweak

--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -276,7 +276,7 @@ constraints imposed by Hazelnut's meta theory.
 
 \end{mathpar}
 }
-\caption{Sum types: Actions (Construction \& Zipper Cases).}
+\caption{Sum types: Construction \& Zipper Actions.}
 \label{fig:sum-action}
 \end{figure}
 
