--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -93,10 +93,10 @@ top), rules for constructing the introduction and elimination
 forms~(Figure~\ref{fig:sum-action} middle), congruence rules for
 editing sub-terms of these forms~(Figure \ref{fig:sum-action} bottom),
 and rules for moving the cursor through the new type and term
-forms~(Figure \ref{fig:sum-move}).  In Figure~\ref{fig:sum-move}, for
-presentation we abuse notation by omitting the horizontal over-bars
-that are typical of inference rules and by instead writing movement
-action axioms in a table.
+forms~(Figure \ref{fig:sum-move}).  In Figure~\ref{fig:sum-move}, we
+abuse notation by omitting the horizontal over-bars that are typical
+of inference rules; instead, we write these movement action axioms in
+a table, for presentation clarity.
 %
 Below, we tour these extensions in further detail, and discuss design
 constraints imposed by Hazelnut's meta theory.
